Text rendering and more options

--- a/go/visualizer/.vscode/launch.json
+++ b/go/visualizer/.vscode/launch.json
@@ -9,7 +9,10 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${fileDirname}"
+            "program": "${fileDirname}",
+            "trace": "log",
+            "showLog": true,
+            "logOutput": "rpc"
         }
     ]
 }
